fix: fix alignment of confirmation overlay

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1228,6 +1228,21 @@ div#cover {
     text-align: center;
   }
 
+  #confirmation-inner-overlay {
+    position: absolute;
+    width: 50%; 
+    height: 20%;
+    /* top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; */
+    background-color: rgb(255, 255, 255);
+    z-index: 2; 
+    border-radius: 20px;
+    transform: translate(50%, 50%);
+    text-align: center;
+  }
+
   #overlay-text {
     position: absolute;
     top: 50%;
